--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,41 +1,42 @@
-<nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="assets/logo.jpg" alt="Papera" width="70" height="70">
-        </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!--<div class="collapse navbar-collapse" id="navBar">-->
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MENÙ</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">PIZZE BIANCHE</a></li>
-                <li><a class="dropdown-item" href="#">PIZZE ROSSE</a></li>
-                <li><a class="dropdown-item" href="#">CONTORNI</a></li>
-                <li><a class="dropdown-item" href="#">DOLCI</a></li>
-                <li><a class="dropdown-item" href="#">BEVANDE</a></li>
-              </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">LE TUE PIZZE</a>
-          </li>  
-          <li class="nav-item">
-            <a class="nav-link" href="#">PRENOTA UN TAVOLO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">ORDINA</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contacts">CONTATTI</a>
-          </li>
-        </ul>
-      <!--</div>-->
-      <a class="navbar-brand" href="#">
-        <img src="assets/user.png" alt="User" width="50" height="50">
-    </a>
+<nav class="navbar fixed-top navbar-expand-lg bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="assets/logo.jpg" alt="Papera" width="70" height="70"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="border-start border-end justify-content-center px-2 py-2">
+      <a class="h5 text-white text-center text-decoration-none" href="#">HOME</a>
     </div>
-  </nav>
+
+    <a href="/contacts" class="btn btn-muted text-white ">HOME</a>
+
+
+    <div class="collapse navbar-collapse justify-content-center">
+      
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="text-white fw-bold" href="#">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/menu">MENÙ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pizze-editor">LE TUE PIZZE</a>
+        </li>  
+        <li class="nav-item">
+          <a class="nav-link" href="#">PRENOTA UN TAVOLO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/order">ORDINA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contacts">CONTATTI</a>
+        </li>
+      </ul>
+    </div>
+    <a class="navbar-brand" href="/login"><img src="assets/user.png" alt="User" width="50" height="50"></a>
+  </div>
+</nav>
 
 
