--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -3,16 +3,13 @@
     <div>
         <h1>I nostri recapiti</h1>
         <div>
-            <p>Pizzeria Qua Qua</p>
-            <div id = "c2" class = "dati_istituzionali">
-                <a>Contrada Trodica, 16 <br> 62014 Corridonia, Macerata</a><br>
-                Tel. <a href="tel:-390733283370">+39 0733 283370</a><br>
-                E-mail: <a href="mailto:pizzeriaquaqua@gmail.com">pizzeriaquaqua@gmail.com</a>
-            </div>
-                
+            <h4>Pizzeria Qua Qua</h4>
+            <a>Contrada Trodica, 16 <br> 62014 Corridonia, Macerata</a><br><br>
+            Tel. <a href="tel:-390733283370">+39 0733 283370</a><br>
+            E-mail: <a href="mailto:pizzeriaquaqua@gmail.com">pizzeriaquaqua@gmail.com</a>     
         </div>
     </div>
-    <div>
-        <iframe src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.187952524632!2d13.529411275212919!3d43.289385475886675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132df54d5ee23bd1%3A0xd4582b80d071574e!2sContrada%20Trodica%2C%2016%2C%2062014%20San%20Claudio%20Stazione-trodica%20MC!5e0!3m2!1sit!2sit!4v1685983269102!5m2!1sit!2sit" width = "600" height = "450" allowfullscreen = "" loading = "lazy" referrerpolicy = "no-referrer-when-downgrade"></iframe>
+    <div id= "mappa" class="container">
+        <iframe src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.187952524632!2d13.529411275212919!3d43.289385475886675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132df54d5ee23bd1%3A0xd4582b80d071574e!2sContrada%20Trodica%2C%2016%2C%2062014%20San%20Claudio%20Stazione-trodica%20MC!5e0!3m2!1sit!2sit!4v1685983269102!5m2!1sit!2sit" width = "600" height = "600" allowfullscreen = "" loading = "lazy" referrerpolicy = "no-referrer-when-downgrade"></iframe>
     </div>
 </div>
