--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -7,20 +7,13 @@ h1{
     font-size: 37px;
 }
 
-p{
+h4{
     font-size: 20px;
     font-weight: bold;
 
 }
 
 a{
-    display: block;
-}
-
-#c1.dati_istituzionali a{
-    width: 100%;}
-
-#c2.dati_istituzionali a{
     color: black;
     font-style: normal;
     text-decoration: none;
