--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-
 <h1>{{title}}</h1>
 <h1>Questa è la landing page</h1>
-<br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque consectetur quis soluta, molestiae, reprehenderit nostrum ut dicta vero magni magnam, quasi quidem fugiat tempora similique laborum ea nesciunt error enim.</h1>
