--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,41 +1,37 @@
-<nav class="navbar fixed-top navbar-expand-lg bg-primary">
+<nav class="navbar fixed-top navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="assets/logo.jpg" alt="Papera" width="70" height="70"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+
+    <a class="navbar-brand justify-content-start" href="#"><img src="assets/logo.jpg" alt="Papera" width="70" height="70"></a>
+
+    <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon bg-white"></span>
     </button>
 
-    <div class="border-start border-end justify-content-center px-2 py-2">
-      <a class="h5 text-white text-center text-decoration-none" href="#">HOME</a>
-    </div>
-
-    <a href="/contacts" class="btn btn-muted text-white ">HOME</a>
-
-
-    <div class="collapse navbar-collapse justify-content-center">
-      
+    <div class="collapse navbar-collapse justify-content-center align-center" id="main-nav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="text-white fw-bold" href="#">HOME</a>
+          <a class="nav-link h6 text-white text-decoration-none border-start border-end  px-2 py-2" href="#">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/menu">MENÙ</a>
+          <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/menu">MENÙ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pizze-editor">LE TUE PIZZE</a>
-        </li>  
-        <li class="nav-item">
-          <a class="nav-link" href="#">PRENOTA UN TAVOLO</a>
+          <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/pizze-editor">LE TUE PIZZE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/order">ORDINA</a>
+          <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="#">PRENOTA UN TAVOLO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contacts">CONTATTI</a>
+          <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/order">ORDINA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/contacts">CONTATTI</a>
         </li>
       </ul>
     </div>
-    <a class="navbar-brand" href="/login"><img src="assets/user.png" alt="User" width="50" height="50"></a>
+
+    <a class="navbar-brand justify-content-end" href="/login"><img src="assets/user.png" alt="User" width="50" height="50"></a>
+
   </div>
 </nav>
 
