--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,15 +1,21 @@
-
-<div class="container-fluid">
-    <div>
-        <h1>I nostri recapiti</h1>
-        <div>
-            <h4>Pizzeria Qua Qua</h4>
-            <a>Contrada Trodica, 16 <br> 62014 Corridonia, Macerata</a><br><br>
-            Tel. <a href="tel:-390733283370">+39 0733 283370</a><br>
-            E-mail: <a href="mailto:pizzeriaquaqua@gmail.com">pizzeriaquaqua@gmail.com</a>     
+<div class="container-xxl">
+    <h1 class="display-3 text-center mb-3">I nostri recapiti</h1>
+    <div class="row justify-content-center"> 
+        <div class="col-lg-5 mt-1">
+            <div class="container-fluid text-dark shadow">
+                <h5 class="fw-bold">Pizzeria Qua Qua</h5>
+                <a>Contrada Trodica, 16 <br> 62014 Corridonia, Macerata</a><br><br>
+                    Tel. <a class="text-black" href="tel:-390733283370">+39 0733 283370</a><br>
+                    E-mail: <a class="text-black" href="mailto:pizzeriaquaqua@gmail.com">pizzeriaquaqua@gmail.com</a>
+            </div>
+        </div>
+        <div class="col-lg-5 d-none d-md-block mt-lg-1 mt-md-5 shadow">
+            <div class="container-fluid" id= "mappa">
+                <iframe src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.187952524632!2d13.529411275212919!3d43.289385475886675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132df54d5ee23bd1%3A0xd4582b80d071574e!2sContrada%20Trodica%2C%2016%2C%2062014%20San%20Claudio%20Stazione-trodica%20MC!5e0!3m2!1sit!2sit!4v1685983269102!5m2!1sit!2sit" width = "500" height = "600" allowfullscreen = "" loading = "lazy" referrerpolicy = "no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </div>
-    <div id= "mappa" class="container">
-        <iframe src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.187952524632!2d13.529411275212919!3d43.289385475886675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132df54d5ee23bd1%3A0xd4582b80d071574e!2sContrada%20Trodica%2C%2016%2C%2062014%20San%20Claudio%20Stazione-trodica%20MC!5e0!3m2!1sit!2sit!4v1685983269102!5m2!1sit!2sit" width = "600" height = "600" allowfullscreen = "" loading = "lazy" referrerpolicy = "no-referrer-when-downgrade"></iframe>
-    </div>
+</div>
+<div class="container d-block d-md-none ">
+    <button class="btn btn-outline-dark mt-2"><a class="nav-link fw-bold px-2 py-2" href="https://www.google.it/maps/place/Contrada+Trodica,+16,+62014+San+Claudio+Stazione-trodica+MC/@43.2893816,13.5319862,17z/data=!3m1!4b1!4m6!3m5!1s0x132df54d5ee23bd1:0xd4582b80d071574e!8m2!3d43.2893816!4d13.5319862!16s%2Fg%2F11c21nx1mm?entry=ttu">IDICAZIONI</a></button>
 </div>
