--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,4 +1,13 @@
-<h1>{{title}}</h1>
-<h1>Questa è la landing page</h1>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque consectetur quis soluta, molestiae, reprehenderit nostrum ut dicta vero magni magnam, quasi quidem fugiat tempora similique laborum ea nesciunt error enim.</h1>
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://www.cataniatoday.it/~media/horizontal-hi/17080408335838/pizza-1-2.jpg" class="d-block w-100" alt="Prima Slide">
+      </div>
+      <div class="carousel-item">
+        <img src="https://images8.alphacoders.com/644/thumb-1920-644361.jpg" class="d-block w-100" alt="Seconda Slide">
+      </div>
+      <div class="carousel-item">
+        <img src="https://coolwallpapers.me/picsup/6143883-bread-pizza-food-cheese.jpg" class="d-block w-100" alt="Terza Slide">
+      </div>
+    </div>
+</div>
