--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg bg-primary">
   <div class="container-fluid">
 
     <a class="navbar-brand justify-content-start" href="#"><img src="assets/logo.jpg" alt="Papera" width="70" height="70"></a>
@@ -30,7 +30,7 @@
       </ul>
     </div>
 
-    <a class="navbar-brand justify-content-end" href="/login"><img src="assets/user.png" alt="User" width="50" height="50"></a>
+    <a class="navbar-brand justify-content-end" href="/login"><i class="bi bi-person-circle">Accedi</i></a>
 
   </div>
 </nav>
