--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -2,7 +2,7 @@
     <h1 class="display-3 text-center mb-3">I nostri recapiti</h1>
     <div class="row justify-content-center align-items-center"> 
         <div class="col-md-6 mt-md-3">
-            <div class="container text-dark shadow py-3 py-">
+            <div class="container text-dark py-3 py-">
                 <h5 class="fw-bold">Pizzeria Qua Qua</h5>
                 <a>Contrada Trodica, 16 <br> 62014 Corridonia, Macerata</a><br><br>
                     Tel. <a class="text-black" href="tel:-390733283370">+39 0733 283370</a><br>
