--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
-<div class= "container-fluid">
+<div class= "d-flex align-items-center justify-content-center">
   <form>
     <h1>Esegui l'accesso</h1>
-    <div class="mb-3">
+    <div class="">
 
       <label for="exampleInputEmail1" class="form-label">Indirizzo Email</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
