--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,4 +1,4 @@
-<div class= "container-fluid">
+<div class= "d-flex align-items-center justify-content-center">
     <form>
         <h1>Effettua la registrazione</h1>
         <div class="mb-3">
@@ -26,3 +26,4 @@
         <br><br>Hai già un account? <a href ="/login">Accedi</a>
     </form>
 </div>
+<br><br><br>
