Primary color changed

--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,31 +1,17 @@
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="https://www.cataniatoday.it/~media/horizontal-hi/17080408335838/pizza-1-2.jpg" class="d-block w-100" alt="Prima Slide">
-    </div>
-    <div class="carousel-item">
-        <img src="https://images8.alphacoders.com/644/thumb-1920-644361.jpg" class="d-block w-100" alt="Seconda Slide">
-    </div>
-    <div class="carousel-item">
-        <img src="https://coolwallpapers.me/picsup/6143883-bread-pizza-food-cheese.jpg" class="d-block w-100" alt="Terza Slide">
-    </div>
-    </div>
-</div>
-
-<br><br>
-
-<div class="container my-5 text-center">
-    <h2 class="display-5">Lasciatevi ispirare dal gusto irresistibile della nostra pizza</h2>
-    <h4>Rotonda, a tranci, a fette, a spicchi, in piedi o a tavola, fuori o a casa, la pizza è sempre buona!</h4>
-</div>
-<div class="container-fluid my-5">
-    <h2>La nostra storia</h2>
-    <div class="row"> <!--creo le righe-->
-        <div class="col-sm-4 col-lg-6"> <!--creo il div per la colonna-->
-            <div class="p-3 bg-muted">La nostra pizzeria nasce nella campagna. Simbolo indiscusso sono le PAPERE! Vi starete chiedendo il perché...</div> <!--contenuto colonna-->
+<br><br><br><br>
+<section id="landing-page" class="bg-light">
+    <div class="container-lg my-5">
+        <div class="row text-center justify-content-center align-items-center g-5">
+            <div class="col-lg-4">
+                <button class="btn btn-primary">Cliccami</button>
+            </div>
+            <div class="col-lg-4">
+                <button class="btn btn-primary">Cliccami</button>
+            </div>
+            <div class="col-lg-4">
+                <button class="btn btn-primary">Cliccami</button>
+            </div>
         </div>
-        <div class="col-sm-4 col-lg-3"> 
-            <div class="p-5 bg-primary text-light">col 2</div>
-        </div>
+        <p class="display-1 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ratione.</p>
     </div>
-</div>
+</section>
