Favicon con paperella

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar fixed-top navbar-expand-lg bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg bg-dark bg-opacity-75">
   <div class="container-fluid">
 
-    <a class="navbar-brand justify-content-start" href="#"><img src="assets/logo.jpg" alt="Papera" width="70" height="70"></a>
+    <a class="navbar-brand justify-content-start" href="#"><img src="assets/logo.jpg" alt="Papera" width="85" height="85"></a>
 
     <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon bg-white"></span>
@@ -30,7 +30,7 @@
       </ul>
     </div>
 
-    <a class="navbar-brand justify-content-end text-light" href="/login"><i class="bi bi-person-circle">Accedi</i></a>
+    <a class="navbar-brand justify-content-end text-light" href="/login">Accedi <i class="bi bi-person-circle"></i></a>
 
   </div>
 </nav>
