--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -17,20 +17,21 @@
 <div class="container my-5 text-center">
     <h1>Un disco di pasta che coinvolge i cinque sensi, un piatto semplice da creare nuovo ogni giorno.
         La pizza è qualcosa in cui credere, da assaporare, da vivere.</h1>
-    <h4>Rotonda, a tranci, a fette, a spicchi, in piedi o a tavola, fuori o a casa, gustala dove e quando vuoi!</h4>
+    <h4 class="text-muted">Rotonda, a tranci, a fette, a spicchi, in piedi o a tavola, fuori o a casa, gustala dove e quando vuoi!</h4>
 </div>
+<br><br>
 <div class="container-fluid my-5">
-    <h1 class="p-3">La nostra storia</h1>
     <div class="row">
-        <div class="col-lg-6">
-            <div class="p-3 mt-5 bg-muted">
-                <h5>Pizzeria Qua Qua è situata a Corridonia, nei pressi delle incantevoli valli di San Claudio. Qui potrai gustare ottime pizze cotte nel forno a legna, realizzate con decine di combinazioni diverse frutto della maestria e del buon gusto dei pizzaioli, e numerosi contorni preparati con ingredienti di prima scelta.
+        <div class="ps-3 col-lg-6">
+            <div class="ps-3 bg-muted">
+                <h1 class="display-2">La nostra storia</h1>
+                <h5 class="display-6 text-muted">Pizzeria Qua Qua è situata a Corridonia, nei pressi delle incantevoli valli di San Claudio. Qui potrai gustare ottime pizze cotte nel forno a legna, realizzate con decine di combinazioni diverse frutto della maestria e del buon gusto dei pizzaioli, e numerosi contorni preparati con ingredienti di prima scelta.
                 La pizzeria Qua Qua offre un vasto assortimento di pizze preparate con ingredienti freschi e adatti a tutti i palati.
                 </h5>
                 </div>
         </div>
         <div class="col-lg-6"> 
-            <div class="pe-2 bg-muted"> 
+            <div class=" bg-muted"> 
                 <img src="https://www.oasicampagnola.it/wp-content/uploads/2017/03/DSC_1416.jpg" class="d-block w-100" alt="pizzeria lago">
             </div>
         </div>
@@ -38,18 +39,17 @@
  <br>
     <div class="row">
         <div class="col-lg-6"> 
-            <div class="pe-2 bg-muted"> 
+            <div class=" bg-muted"> 
                 <img src="https://www.lakeidrotravel.com/wp-content/uploads/2022/02/pizza-lago-dIdro.jpeg" class="d-block w-100" alt="pizzeria lago">
             </div>
         </div>
         <div class="col-lg-6">
             <div class="p-3 mt-5 bg-muted">
-                <h5>Ha come punto di forza il giardino e l'immenso lago pieno di Papere, da cui deriva il suo nome. 
-                    Potrai gustere la tua pizza al bordo del lago durante il tramonto o all'interno del ristorante.
+                <h5 class="display-6 text-muted">Ha come punto di forza il giardino e l'immenso lago pieno di Papere, da cui deriva il suo nome. 
+                    Potrai gustare la tua pizza al bordo del lago durante il tramonto o all'interno del ristorante.
                     Venite a trovarci per assaporare il gusto della nostra pizza e per passare una bella giornata rilassati nel nostro giardino vista lago con le papere!
                     </h5>
                 </div>
         </div>
-        <p class="display-1 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ratione.</p>
     </div>
 </div>
