--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,55 +1,48 @@
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+<div class="d-lg-none">
+    <br><br><br><br>
+</div>
+
+<div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="https://images8.alphacoders.com/644/thumb-1920-644361.jpg" class="d-block w-100" alt="Prima Slide">
-    </div>
-    <div class="carousel-item">
-        <img src="https://coolwallpapers.me/picsup/6143883-bread-pizza-food-cheese.jpg" class="d-block w-100" alt="Seconda Slide">
-    </div>
-    <div class="carousel-item">
-        <img src="https://www.tvsvizzera.it/resource/image/46766980/landscape_ratio16x9/1920/1080/3f543b7fe6d717958a8ef7b17daa5958/B11EB27C7BD373B3FCF8645C841E58B5/326628063_highres.jpg" class="d-block w-100" alt="Terza Slide">
-    </div>
+            <img src="https://images8.alphacoders.com/644/thumb-1920-644361.jpg" class="d-block w-100" alt="Prima Slide">
+        </div>
+        <div class="carousel-item">
+            <img src="https://coolwallpapers.me/picsup/6143883-bread-pizza-food-cheese.jpg" class="d-block w-100" alt="Seconda Slide">
+        </div>
+        <div class="carousel-item">
+            <img src="https://www.tvsvizzera.it/resource/image/46766980/landscape_ratio16x9/1920/1080/3f543b7fe6d717958a8ef7b17daa5958/B11EB27C7BD373B3FCF8645C841E58B5/326628063_highres.jpg" class="d-block w-100" alt="Terza Slide">
+        </div>
     </div>
 </div>
 
 <br><br>
 
-<div class="container my-5 text-center">
-    <h1>Un disco di pasta che coinvolge i cinque sensi, un piatto semplice da creare nuovo ogni giorno.
-        La pizza è qualcosa in cui credere, da assaporare, da vivere.</h1>
-    <h4 class="text-muted">Rotonda, a tranci, a fette, a spicchi, in piedi o a tavola, fuori o a casa, gustala dove e quando vuoi!</h4>
+<div class="container my-5 p-5 text-md-center shadow bg-light">
+    <h1 class="lg-display-1 font-monospace">Un disco di pasta che coinvolge i cinque sensi, un piatto semplice da creare nuovo ogni giorno. La pizza è qualcosa in cui credere, da assaporare, da vivere.</h1>
+    <h4 class="text-muted font-monospace">Rotonda, a tranci, a fette, a spicchi, in piedi o a tavola, fuori o a casa, gustala dove e quando vuoi!</h4>
 </div>
+
 <br><br>
-<div class="container-fluid my-5">
-    <div class="row">
-        <div class="ps-3 col-lg-6">
-            <div class="ps-3 bg-muted">
+
+<div class="container-fluid">
+    <div class="row justify-content-center bg-secondary">
+        <div class="col-lg-6 p-3">
+            <div class="container">
                 <h1 class="display-2">La nostra storia</h1>
-                <h5 class="display-6 text-muted">Pizzeria Qua Qua è situata a Corridonia, nei pressi delle incantevoli valli di San Claudio. Qui potrai gustare ottime pizze cotte nel forno a legna, realizzate con decine di combinazioni diverse frutto della maestria e del buon gusto dei pizzaioli, e numerosi contorni preparati con ingredienti di prima scelta.
-                La pizzeria Qua Qua offre un vasto assortimento di pizze preparate con ingredienti freschi e adatti a tutti i palati.
-                </h5>
-                </div>
-        </div>
-        <div class="col-lg-6"> 
-            <div class=" bg-muted"> 
-                <img src="https://www.oasicampagnola.it/wp-content/uploads/2017/03/DSC_1416.jpg" class="d-block w-100" alt="pizzeria lago">
+                <h5 class="display-6 text-muted">Pizzeria Qua Qua è situata a Corridonia, nei pressi delle incantevoli valli di San Claudio. Qui potrai gustare ottime pizze cotte nel forno a legna, realizzate con decine di combinazioni diverse frutto della maestria e del buon gusto dei pizzaioli, e numerosi contorni preparati con ingredienti di prima scelta.La pizzeria Qua Qua offre un vasto assortimento di pizze preparate con ingredienti freschi e adatti a tutti i palati.</h5>
             </div>
+        </div>
+        <div class="col-lg-6 p-0">
+            <img src="/assets/ristorante-lago.jpg" class="img-fluid width-100" alt="pizzeria lago">
         </div>
     </div>
- <br>
-    <div class="row">
-        <div class="col-lg-6"> 
-            <div class=" bg-muted"> 
-                <img src="https://www.lakeidrotravel.com/wp-content/uploads/2022/02/pizza-lago-dIdro.jpeg" class="d-block w-100" alt="pizzeria lago">
-            </div>
+    <div class="row justify-content-center bg-primary">
+        <div class="col-lg-6 p-0">
+            <img src="/assets/pizza-lago.jpeg" class="d-block w-100" alt="pizzeria lago">
         </div>
-        <div class="col-lg-6">
-            <div class="p-3 mt-5 bg-muted">
-                <h5 class="display-6 text-muted">Ha come punto di forza il giardino e l'immenso lago pieno di Papere, da cui deriva il suo nome. 
-                    Potrai gustare la tua pizza al bordo del lago durante il tramonto o all'interno del ristorante.
-                    Venite a trovarci per assaporare il gusto della nostra pizza e per passare una bella giornata rilassati nel nostro giardino vista lago con le papere!
-                    </h5>
-                </div>
+        <div class="col-lg-6 p-3">
+            <h5 class="display-6 text-muted">Ha come punto di forza il giardino e l'immenso lago pieno di Papere, da cui deriva il suo nome. Potrai gustare la tua pizza al bordo del lago durante il tramonto o all'interno del ristorante. Venite a trovarci per assaporare il gusto della nostra pizza e per passare una bella giornata rilassati nel nostro giardino vista lago con le papere!</h5>
         </div>
     </div>
 </div>
