--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,40 +2,40 @@
   <nav class="navbar fixed-top navbar-expand-lg bg-dark bg-opacity-75">
 
     <div class="justify-content-start ms-3">
-      <a class="navbar-brand" href="#"><img src="assets/logo.jpg" alt="Papera" width="85" height="85"></a>
+      <a href="#"><img src="assets/logo.jpg" class="rounded-circle" width="85" height="85"></a>
     </div>
   
     <button class="navbar-toggler bg-primary ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="bi bi-filter"></i>
     </button>
 
-    <div class="container">
+    <div class="container text-uppercase">
       <div class="collapse navbar-collapse justify-content-center" id="main-nav">
-        <ul class="navbar-nav ">
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none border-start border-end  px-2 py-2" href="#">HOME</a>
+            <a class="nav-link h6 text-white text-decoration-none p-2" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/menu">MENÙ</a>
+            <a class="nav-link h6 text-white text-decoration-none p-2" href="/menu">Menù</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/pizze-editor">LE TUE PIZZE</a>
+            <a class="nav-link h6 text-white text-decoration-none p-2" href="/pizze-editor">Le tue pizze</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="#">PRENOTA UN TAVOLO</a>
+            <a class="nav-link h6 text-white text-decoration-none p-2" href="#">Prenota un tavolo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/order">ORDINA</a>
+            <a class="nav-link h6 text-white text-decoration-none p-2" href="/order">Ordina</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none border-end  px-2 py-2" href="/contacts">CONTATTI</a>
+            <a class="nav-link h6 text-white text-decoration-none p-2" href="/contacts">Contatti</a>
           </li>
         </ul>
       </div>
     </div>
     
     <div class="justify-content-end">
-      <a class="navbar-brand text-light" href="/login">Accedi <i class="bi bi-person-circle"></i></a>
+      <a class="text-light" href="/login">Accedi<i class="bi bi-person-circle mx-2"></i></a>
     </div>
 
   </nav>
@@ -50,15 +50,15 @@
     <div class="container-fluid justify-content-center text-center">
 
       <div class="container-fluid">
-        <a class="navbar-brand" href="#sidebar" data-bs-toggle="offcanvas" role="button" aria-controls="sidebar"><i class="bi bi-list" style="font-size: 50px;"></i></a>
+        <a href="#sidebar" data-bs-toggle="offcanvas" role="button" aria-controls="sidebar"><i class="bi bi-list text-black" style="font-size: 50px;"></i></a>
       </div>
       
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="assets/logo.jpg" alt="Papera" width="85" height="85"></a>
+        <a href="#"><img src="assets/logo.jpg" class="rounded-circle" width="85" height="85"></a>
       </div>
 
       <div class="container-fluid">
-        <a class="navbar-brand" href="/login"><i class="bi bi-person-circle" style="font-size: 50px;"></i></a>
+        <a href="/login"><i class="bi bi-person-circle text-black" style="font-size: 50px;"></i></a>
       </div>
 
     </div>
@@ -73,7 +73,10 @@
   <div class="offcanvas-body">
 
     <a href="/menu" class="text-decoration-none h2">Menù</a><br><br>
-    <a href="/menu" class="text-decoration-none h2">Le tue pizze</a><br><br>
+    <a href="/pizze-editor" class="text-decoration-none h2">Le tue pizze</a><br><br>
+    <a href="/#" class="text-decoration-none h2">Prenota un tavolo</a><br><br>
+    <a href="/order" class="text-decoration-none h2">Ordina</a><br><br>
+    <a href="/contacts" class="text-decoration-none h2">Contatti</a><br><br>
 
   </div>
 </div>
