--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -58,16 +58,16 @@
 
 
 
-    <div class="container-fluid bg-primary">
+    <div class="container-fluid bg-primary justify-content-center align-items-center text-center">
         
-            <div class="row">
-                <div class="col-sm-6" style="height: 561px;">
-                    <div class="contents">
-                        <h2 style="text-align: center;"><a name="menuristoranti">&nbsp;</a><span style="font-size:36px;">Scopri il menù</span></h2>
-                        <p>
-                            <span style="font-size: 18px;">Piatti unici di pesce, di carne o di verdure, fritti o non fritti, semplici e preparati con sole materie prime genuine.</span>
-                            <span style="font-size: 28px;">&nbsp;</span>
-                            <em style="font-size: 10px;">“La qualità non è questione di possibilità ma di mentalità”&nbsp; &nbsp; G. Albertini</em>
+            <div class="row justify-content-center align-items-center text-center">
+                <div class="col-sm-6 justify-content-center align-items-center text-center" style="height: 561px;">
+                    
+                        <h2><span style="font-size:36px;">Scopri il menù</span></h2>
+                        <p class="justify-content-center align-items-center text-center">
+                            <span>Piatti unici di pesce, di carne o di verdure, fritti o non fritti, semplici e preparati con sole materie prime genuine.</span>
+                            <span>&nbsp;</span>
+                            <em>“La qualità non è questione di possibilità ma di mentalità”&nbsp; &nbsp; G. Albertini</em>
                         </p>
                         <div style="text-align: center;">
                             <a class="btn btn-empty" href="http://lepapereallago.it/public/MenùRistoranti_2023.pdf">Sfoglia il menù</a>
@@ -76,7 +76,7 @@
                         <div style="text-align: center;">
                             <div>&nbsp;</div>
                         </div>
-                    </div>
+                
                 </div>
                 <div class="col-sm-6" style="background-image: url(/assets/pizza-lago.jpeg); height: 561px;"></div>
             </div>
