--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,32 +9,32 @@
       <i class="bi bi-filter"></i>
     </button>
 
-    <div class="container text-uppercase">
+    <div class="container text-uppercase mb-1">
       <div class="collapse navbar-collapse justify-content-center" id="main-nav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav h5">
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none p-2" href="#">Home</a>
+            <a class="nav-link text-white text-decoration-none p-2" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none p-2" href="/menu">Menù</a>
+            <a class="nav-link text-white text-decoration-none p-2" href="/menu">Menù</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none p-2" href="/pizze-editor">Le tue pizze</a>
+            <a class="nav-link text-white text-decoration-none p-2" href="/pizze-editor">Le tue pizze</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none p-2" href="#">Prenota un tavolo</a>
+            <a class="nav-link text-white text-decoration-none p-2" href="#">Prenota un tavolo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none p-2" href="/order">Ordina</a>
+            <a class="nav-link text-white text-decoration-none p-2" href="/order">Ordina</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link h6 text-white text-decoration-none p-2" href="/contacts">Contatti</a>
+            <a class="nav-link text-white text-decoration-none p-2" href="/contacts">Contatti</a>
           </li>
         </ul>
       </div>
     </div>
     
-    <div class="justify-content-end">
+    <div class="justify-content-end h5 me-3">
       <a class="text-light" href="/login">Accedi<i class="bi bi-person-circle mx-2"></i></a>
     </div>
 
