--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,7 +35,7 @@
     </div>
     
     <div class="justify-content-end h5 me-3">
-      <a class="text-light" href="/login">Accedi<i class="bi bi-person-circle mx-2"></i></a>
+      <a class="text-light nowrap" href="/login">Accedi<i class="bi bi-person-circle mx-2"></i></a>
     </div>
 
   </nav>
