--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,16 +1,21 @@
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="https://images8.alphacoders.com/644/thumb-1920-644361.jpg" class="d-block w-100" alt="Prima Slide">
+<section id="contenitore_top">
+    <div id="scritta">
+        <img src="/assets/Pizzeria Qua Qua.png" class="text-center">
     </div>
-    <div class="carousel-item">
-        <img src="https://coolwallpapers.me/picsup/6143883-bread-pizza-food-cheese.jpg" class="d-block w-100" alt="Seconda Slide">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://images8.alphacoders.com/644/thumb-1920-644361.jpg" class="d-block w-100" alt="Prima Slide">
+        </div>
+        <div class="carousel-item">
+            <img src="https://coolwallpapers.me/picsup/6143883-bread-pizza-food-cheese.jpg" class="d-block w-100" alt="Seconda Slide">
+        </div>
+        <div class="carousel-item">
+            <img src="https://www.tvsvizzera.it/resource/image/46766980/landscape_ratio16x9/1920/1080/3f543b7fe6d717958a8ef7b17daa5958/B11EB27C7BD373B3FCF8645C841E58B5/326628063_highres.jpg" class="d-block w-100" alt="Terza Slide">
+        </div>
+        </div>
     </div>
-    <div class="carousel-item">
-        <img src="https://www.tvsvizzera.it/resource/image/46766980/landscape_ratio16x9/1920/1080/3f543b7fe6d717958a8ef7b17daa5958/B11EB27C7BD373B3FCF8645C841E58B5/326628063_highres.jpg" class="d-block w-100" alt="Terza Slide">
-    </div>
-    </div>
-</div>
+</section>
 
 <br><br>
 
